codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__exec__tests__coalesces_reads_across_multiple_calls.snap
---
source: tui/src/history_cell/exec.rs
expression: rendered
---
• Explored
  └ Search shimmer_spans
    Read shimmer.rs, status_indicator_widget.rs
