codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__exec__tests__multiline_command_without_wrap_uses_branch_then_eight_spaces.snap
---
source: tui/src/history_cell/exec.rs
expression: rendered
---
• Ran echo one
  │ echo two
  └ (no output)
