codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__exec__tests__ran_cell_multiline_with_stderr_snapshot.snap
---
source: tui/src/history_cell/exec.rs
expression: rendered
---
• Ran echo
  │ this_is_a_very_long_si
  │ ngle_token_that_will_w
  │ … +2 lines
  └ error: first line on
    stderr
    error: second line on
    stderr
