codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__exec__tests__single_line_command_compact_when_fits.snap
---
source: tui/src/history_cell/exec.rs
expression: rendered
---
• Ran echo ok
  └ (no output)
